# neon-warehouse

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: .env.example
tests/: conftest.py  test_add_note.py  test_find_order.py  test_list_orders.py  test_list_tags.py  test_mark_rush.py  test_shipstation.py  test_warehouse.py
tools/: __init__.py
tools/shipstation/: __init__.py  add_note.py  find_order.py  get_dc2_emails.py  get_order.py  list_orders.py  list_tags.py  mark_rush.py  warehouse.py
tools/shopify/: __init__.py
